--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
               <div class="resume__item">
                 <div class="resume__header">
-                  <h3 class="resume__subtitle">Worild Quant University</h3>
+                  <h3 class="resume__subtitle">World Quant University</h3>
                   <span class="resume__icon
                   ">-</span>
                 </div>
